Control de acceso

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Mi Página con Menú</title>
+    <title>Peñavera Puntuaciones</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
+    <h1 id="Peñavera">Peñavera</h1>
     <nav>
-        <h1 id="Peñavera">Peñavera</h1>
+       
         <ul class="menu">
             <li><a href="index.html">Inicio</a></li>
             <li><a href="nuevo-usuario.html">Nuevo Usuario</a></li>
