--- a/nuevo-usuario.html
+++ b/nuevo-usuario.html
@@ -5,13 +5,17 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
+    <h1 id="Peñavera">Peñavera</h1>
     <nav>
+       
         <ul class="menu">
             <li><a href="index.html">Inicio</a></li>
+            <li><a href="nuevo-usuario.html">Nuevo Usuario</a></li>
+            <li><a href="#nuevo-partido">Nuevo Partido</a></li>
         </ul>
     </nav>
 
-    <h1>Nuevo Usuario</h1>
+    <h2>Nuevo Usuario</h2>
     <form id="nuevoUsuarioForm">
         <input type="text" id="apodo" placeholder="Apodo">
         <input type="text" id="nombre" placeholder="Nombre">
